--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <activity
             android:name=".ui.IncluirNovoActivity"
             android:label="@string/title_activity_incluir_novo"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.EditarActivity"
+            android:label="@string/title_activity_editar"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
